# ros2_workspace

ros2_basics_tuto/install/: local_setup.sh  setup.sh
ros2_basics_tuto/install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_server  battery  cpp_node  hardware_status_publisher  led_panel  number_counter  number_publisher  robot_news_station  smartphone
ros2_basics_tuto/install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
ros2_basics_tuto/install/my_py_pkg/share/my_py_pkg/: package.sh
ros2_basics_tuto/log/: latest_build
ros2_gazebo_urdf_rviz_tuto/: complete_robot.gv
ros2_gazebo_urdf_rviz_tuto/install/: local_setup.sh  setup.sh
ros2_gazebo_urdf_rviz_tuto/log/: latest_build
ros2_gazebo_urdf_rviz_tuto/src/my_robot_description/urdf/: my_robot.urdf.xacro
ros2_xrc_rover/install/: local_setup.sh  setup.sh
ros2_xrc_rover/log/: latest_build
ros2_xrc_rover/src/xrc_rover_bringup/: CMakeLists.txt  package.xml
ros2_xrc_rover/src/xrc_rover_bringup/launch/: xrc_rover_gazebo.launch.xml  xrc_rover_model.launch.xml
ros2_xrc_rover/src/xrc_rover_description/: CMakeLists.txt
ros2_xrc_rover/src/xrc_rover_description/rviz/: xrc_rover_config.rviz
ros2_xrc_rover/src/xrc_rover_description/urdf/: camera.xacro  common_properties.xacro  gazebo_control.xacro  lidar.xacro  mobile_base.xacro  test.xacro  xrc_rover.urdf.xacro
ros2_xrc_rover/src/xrc_rover_description/worlds/: test_world.world
ros2_xrc_rover/src/xrc_rover_teleop/: CMakeLists.txt  package.xml
ros2_xrc_rover/src/xrc_rover_teleop/src/: xrc_rover_teleop_key.cpp
(+79 files in other folders)
